charts/rancher-demo/rancher-demo/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-demo-ingress
  namespace: default
spec:
  rules:
    - host: sslip.io
      http:
        paths:
          - backend:
              service:
                name: rancher-demo-http
                port:
                  number: 8080
            path: /
            pathType: Prefix
